# Mnist-neural-network

./: .gitignore  LICENSE  Makefile  README.md  pyproject.toml  requirements.txt
data/: biases.json  weights.json
py/: mnist_loader.py  network.py
src/: bash.txt  data_loader.cc  data_loader.cpp  data_loader.h  main.cc  network  network.cc  network.cpp  network.h  weights_loader.cc  weights_loader.cpp  weights_loader.h
