[project]
name = "mnist"
version = "0.1"
requires-python = ">=3.9"
dependencies = [
    "numpy>=1.21.0",
    "Pillow>=12.0.0",
]

[tool.ruff]
# Target version (e.g., "py310")
target-version = "py312"
line-length = 88
indent-width = 4

[tool.ruff.lint]
# Enable specific rules (e.g., "E" for Error, "F" for Pyflakes)
select = ["E", "F", "I"] 
fixable = ["ALL"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.uv.workspace]
members = [
    "my-project",
]
